@@ -10,13 +10,13 @@ RUN apk add --no-cache procps bash curl unzip
 COPY snippy-note-services-service-1.0.0-SNAPSHOT.jar app.jar
 
 # JVM tuning variables optimized for ~50 concurrent users
-ENV JVM_XMS=128m
+ENV JVM_XMS=160m
 ENV JVM_XMX=160m
-ENV METASPACE=128m
+ENV METASPACE=120m
 ENV RESERVED_CODE_CACHE=80m
-ENV STACK_SIZE=412k
-ENV GC_THREADS=4
-ENV CI_COMPILER=4
+ENV STACK_SIZE=512k
+ENV GC_THREADS=2
+ENV CI_COMPILER=2
 
 # Compose JAVA_OPTS with performance enhancements
 ENV JAVA_OPTS="-Xms${JVM_XMS} -Xmx${JVM_XMX} \
@@ -26,8 +26,7 @@ ENV JAVA_OPTS="-Xms${JVM_XMS} -Xmx${JVM_XMX} \
  -XX:CICompilerCount=${CI_COMPILER} \
  -XX:ConcGCThreads=${GC_THREADS} \
  -XX:G1ConcRefinementThreads=${GC_THREADS} \
- -XX:+UseG1GC \
- -XX:MaxGCPauseMillis=10 \
+ -XX:MaxGCPauseMillis=15 \
  -XX:+UseCompressedOops \
  -XX:+UseCompressedClassPointers \
  -XX:+TieredCompilation \
@@ -36,6 +35,7 @@ ENV JAVA_OPTS="-Xms${JVM_XMS} -Xmx${JVM_XMX} \
  -XX:+OptimizeStringConcat \
  -XX:+UseStringDeduplication \
  -XX:+UnlockExperimentalVMOptions \
+ -XX:+UseZGC \
  -XX:G1HeapRegionSize=1m"
 
 # Expose port
